# -

./: .gitignore  CMakeLists.txt  Effekseer.vcxproj  EffekseerRendererCommon.vcxproj  EffekseerRendererDX11.vcxproj  README.md  ReflectSweets_概要.pptx  SweetsActionDX11.vcxproj  SweetsActionDX11.vcxproj.filters  SweetsActionDX11_Game.sln  run_game.ps1
assets/: README_assets.md
assets/data/: README_data.md  characters.csv
assets/effects/sword/: sword_slash.efkefc
assets/shaders/: basic_lit.hlsl  bloom.hlsl  effect_additive.hlsl  postprocess.hlsl  sprite_unlit.hlsl
assets/video/: README_video.md
docs/: effekseer_runtime.md  game_spec.md  implementation_notes.md  technical_design.md  企画書.md
src/: AppUtil.cpp  AppWindow.cpp  AssetCatalog.cpp  AssetCatalog.h  AssetLoaders.cpp  AssetLoaders.h  AudioSystem.cpp  AudioSystem.h  ChargeAttack.cpp  CombatEffects.cpp  CombatLoop.cpp  CoopController.cpp  DataTables.cpp  DataTables.h  DimensionRules.cpp  EffekseerSystem.cpp  EffekseerSystem.h  EnemyController.cpp  FrameView.cpp  GameDefs.h  GameFlow.cpp  GameLogic.cpp  GameMath.h  GameStateTypes.h  GameTypes.h  GameUiTypes.h  GamepadInput.cpp  GameplayView.cpp  GraphicsDevice.cpp  HiddenBossLogic.cpp  InputFlow.cpp  MediaView.cpp  MenuView.cpp  ModelLibrary.cpp  ModelLibrary.h  PlayerController.cpp  ReflectionSystem.cpp  ReflectionSystem.h  Renderer.cpp  SaveData.cpp  (+15 more)
tools/: sync-data.ps1
